# pandoc-latex-admonition

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  pandoc_latex_admonition.py  pyproject.toml  setup.cfg  setup.py  tox.ini  whitelist.txt
.github/workflows/: python-package.yml  python-publish.yml
docs/: conf.py  index.rst  usage.rst
docs/images/: pandoc-latex-admonition-sample.txt  toto.aux  toto.tex
pandoc_latex_admonition/: _main.py
src/pandoc_latex_admonition/: __init__.py  _main.py
tests/: helper.py  test_admonition.py
