[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[metadata]
description-file = README.md
version = 1.3.2
release = 1.3.2

[aliases]
test = pytest

[build_sphinx]
project = pandoc-latex-admonition
version = 1.3
release = 1.3.2
copyright = 2017-2021, Christophe Demko
